# oxidized_bot

./: Cargo.toml
src/: main.rs
src/domain/: error.rs  event.rs  event_handler.rs  handler.rs  mod.rs
src/domain/aggregate/: entry_aggregate.rs  mod.rs
src/domain/command/: entry_command.rs  mod.rs
src/domain/command/handler/: generate_code.rs  mod.rs  upload_painted_image.rs  upload_prime_image.rs
src/domain/event/: entry_event.rs  mod.rs
src/enums/: commands.rs  events.rs
src/presentation/: mod.rs  paint_bot.rs
src/service/: entry_service.rs  mod.rs
